syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.mohyla.payments.grpc";
option java_outer_classname = "PaymentProto";

service PaymentService {
  rpc StreamPayments (PaymentRequest) returns (stream PaymentResponse);

  rpc GetPaymentById (PaymentIdRequest) returns (PaymentResponse);
}

message PaymentRequest {
  int64 userId = 1;
}

message PaymentIdRequest {
  int64 paymentId = 1;
}

message PaymentResponse {
  int64 id = 1;
  int64 userId = 2;
  double amount = 3;
  string description = 4;
  string paymentMethod = 5;
  string timestamp = 6;
  string status = 7;
}